--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
+* {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 html {
   font-size: 62.5%;
   margin: 0;
