--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -141,7 +141,7 @@
     }
 
     &__nav {
-      min-width: 100%;
+      width: 300px;
     }
 
     &__arrow {
