--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -13,7 +13,7 @@
   &__item {
     width: 30%;
     text-align: center;
-    margin: 40px 0;
+    margin: 40px 4px;
     text-shadow: 2px 2px $mainBackground;
     transition: all 0.5s;
     padding: 10px;
@@ -28,6 +28,16 @@
   &__item:focus {
     transform: translateY(-5%) !important;
     box-shadow: 0 0 6px $accent;
+  }
+}
+
+@media (max-width: 1100px) {
+  .projects {
+    .btn {
+      display: block;
+      width: 50%;
+      margin: 10px auto;
+    }
   }
 }
 
